@@ -3,7 +3,9 @@ git HEAD
     * Add URLs for several austrian EFA services
       (pointed out by Gregor Herrmann)
     * Support EFA services which do not distinguish between scheduled
-      and realtime data (pointed out by Gregor Herrmann)
+      and realtime data (also pointed out by Gregor Herrmann)
+    * efa: Add -D/--discover option
+    * Travel::Routing::DE::EFA: Add get_efa_urls method
 
 Travel::Routing::DE::VRR 2.06 - Sat Aug 02 2014
 
